--- a/src/app/ressource/ressource.component.html
+++ b/src/app/ressource/ressource.component.html
@@ -248,19 +248,10 @@
                 <a class="nav-link" routerLink="/financement" routerLinkActive="active" (click)="isMenuOpen = false">Financement</a>
             </li>
              
-              <li class="nav-item my-1">
-                <a class="btn btn-outline-light rounded-pill px-3" routerLink="/connexion" (click)="isMenuOpen = false">
-                  <i class="fas fa-sign-in-alt me-1"></i> Connexion
-                </a>
-              </li>
-              <li class="nav-item ms-lg-2 my-1">
-                <a class="btn btn-success rounded-pill px-3" routerLink="/c-compte" (click)="isMenuOpen = false">
-                  <i class="fas fa-user-plus me-1"></i> Inscription
-                </a>
-              </li>
+             
 
               <li class="nav-item ms-lg-2 my-1 d-flex align-items-center">
-                <button class="btn btn-link text-light p-0" (click)="openSettings()" title="Profil">
+                <button class="btn btn-link text-light p-0"  title="Profil" routerLink="/profil">
                     <i class="fas fa-user fa-lg"></i>
                 </button>
             </li>
